--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -1,6 +1,7 @@
 <!-- src/app/task-list/task-list.component.html -->
 <div>
     <h2>Task List</h2>
+    <button (click)="exportCsv()">Export CSV</button>
     <table>
       <thead>
         <tr>
