--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -11,7 +11,10 @@
   <ul>
     <li *ngFor="let task of tasks | sortTasks: sortBy">
       {{ task.title }} - {{ task.dueDate | date }} - {{ task.priority }} - {{ task.status }}
+      <button (click)="editTask(task)">Edit</button>
+      <button (click)="onDeleteTask()">Delete</button>
     </li>
+
   </ul>
   <button (click)="exportCsv()">Export CSV</button>
   <table>
@@ -23,5 +26,6 @@
     *ngIf="selectedTask"
     [task]="selectedTask"
     (editTaskEvent)="onEditTask($event)"
+    (deleteTaskEvent)="onDeleteTask()"
   ></app-task-details>
 </div>
